--- a/jan08web/src/main/webapp/css/detail.css
+++ b/jan08web/src/main/webapp/css/detail.css
@@ -56,8 +56,7 @@
 .comment-write {
 	margin-top: 10px; 
 	width : 100%;
-	min-height: 100px;
-	height:auto;
+	height: 120px;
 	padding: 10px;
 	background-color: #c0c0c0;
 	box-sizing: border-box;
