--- a/jan08web/src/main/webapp/css/detail.css
+++ b/jan08web/src/main/webapp/css/detail.css
@@ -115,9 +115,25 @@
 	height: auto;
     padding: 0px 10px;
 }
+.commentcontent{
+	margin: 0;
+	width: calc(100% - 100px);
+	height: 100px;
+	padding:5px;
+	border: 0px;
+	float: left;
+	resize: none;
+	box-sizing: border-box;
+}
 
-
-
+.comment-btn{
+	margin: 0;
+	padding:0;
+	width: 100px;
+	height: 100px;
+	float: left;
+	border: 0px;
+}
 
 
 
