수정했습니다

--- a/jan08web/src/main/webapp/css/detail.css
+++ b/jan08web/src/main/webapp/css/detail.css
@@ -118,7 +118,8 @@
 .commentcontent{
 	margin: 0;
 	width: calc(100% - 100px);
-	height: 100px;
+	min-height: 100px;
+	height: auto;
 	padding:5px;
 	border: 0px;
 	float: left;
