--- a/jan08web/src/main/webapp/css/admin.css
+++ b/jan08web/src/main/webapp/css/admin.css
@@ -34,11 +34,24 @@ nav > ul > li{
 	padding:0;
 	margin: 5px 10px;
 	padding: 10px 0px;
-	text-align: center;
+	text-align: left;
+	padding-left: 5px;
 }
 nav > ul > li:hover {
 	background-color: #ffffff;
 }
 
+.info{
+	width : 200px;
+	height: 200px;
+	line-height:200px;
+	text-align:center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	background-color: gray;
+	margin-top: -100px;
+	/* margin-left: -50px; */
+}
 
 
