개발자가 배 고파합니다.

--- a/jan08web/src/main/webapp/css/member.css
+++ b/jan08web/src/main/webapp/css/member.css
@@ -39,3 +39,25 @@ td{
 	width: 20%;
 	text-align: left;
 }
+.row0{
+	background-color: #FFB4EB;
+}
+.row1{
+	background-color: #c0c0c0;
+}
+.row2{
+	background-color: #3DFF92;
+}
+.row9{
+	background-color: #FFDC46;
+}
+
+
+
+
+
+
+
+
+
+
