--- a/jan08web/src/main/webapp/css/admin.css
+++ b/jan08web/src/main/webapp/css/admin.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+/* css변수만들기 2024-01-29
+--변수명 : 값;
+전역 변수로 만들기 :root{}
+ */
+:root{
+	--main : 45px;
+}
+
 body{
 	margin: 0;
 	padding: 0;	
@@ -10,12 +18,18 @@ body{
 	display: flex;
 }
 .menu{
-	width: 150px;
+	/* 변수 사용 var(변수명) */
+	width: var(--main);
 	height: 100vh;
 	background-color: gray;
+	overflow: hidden;
+}
+.menu:hover{
+	width: 150px;
+	transition: 0.3s;
 }
 .main{
-	width: calc(100% - 150px);
+	width: calc(100% - var(--main));
 	height: 100vh;
 	/* background-color: yellow; */
 }
@@ -36,7 +50,24 @@ nav > ul > li{
 	padding: 10px 0px;
 	text-align: left;
 	padding-left: 5px;
+	/* padding-left: 5px; */
+	width: 150px;
+	overflow: hidden;
 }
+
+nav > ul > li > i{
+	margin-right: 6px;
+	/* firefox */
+	-moz-margin-right: 6px;
+	/* opera */
+	-o-margin-right: 6px;
+	/* 크롬, 앳지, 웨일 */
+	-webkit-margin-right: 6px;
+	/* 인터넷익플로러 */
+	-ms-margin-right: 6px;
+}
+	
+	
 nav > ul > li:hover {
 	background-color: #ffffff;
 }
