--- a/jan08web/src/main/webapp/css/admin.css
+++ b/jan08web/src/main/webapp/css/admin.css
@@ -23,6 +23,7 @@ body{
 	height: 100vh;
 	background-color: gray;
 	overflow: hidden;
+	position: absolute;
 }
 .menu:hover{
 	width: 150px;
@@ -31,6 +32,7 @@ body{
 .main{
 	width: calc(100% - var(--main));
 	height: 100vh;
+	margin-left: var(--main);
 	/* background-color: yellow; */
 }
 
@@ -56,7 +58,7 @@ nav > ul > li{
 }
 
 nav > ul > li > i{
-	margin-right: 6px;
+	margin-right: 7px;
 	/* firefox */
 	-moz-margin-right: 6px;
 	/* opera */
